fixed year scroller layout issue

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -172,6 +172,8 @@ nav.filters
     scroll-snap-type: inline proximity
 
     .year-list
+      display: grid
+      grid-auto-flow: column
       grid-auto-columns: 1fr
       gap: var(--font-size-200)
 
